dao层支持使用多种持久化框架

--- a/leaf-plugin/pom.xml
+++ b/leaf-plugin/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>leaf-parent</artifactId>
-        <groupId>com.sankuai.inf.leaf</groupId>
-        <version>1.0.1-RELEASE</version>
+        <groupId>com.tencent.devops.leaf</groupId>
+        <version>1.0.0-RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
