--- a/leaf-core/pom.xml
+++ b/leaf-core/pom.xml
@@ -2,14 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.sankuai.inf.leaf</groupId>
+        <groupId>com.tencent.devops.leaf</groupId>
         <artifactId>leaf-parent</artifactId>
-        <version>1.0.1-RELEASE</version>
+        <version>1.0.0-RELEASE</version>
     </parent>
-    <groupId>com.sankuai.inf.leaf</groupId>
     <artifactId>leaf-core</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.1-RELEASE</version>
+    <version>1.0.0-RELEASE</version>
     <name>leaf-core</name>
     <properties>
         <mysql-connector-java.version>5.1.38</mysql-connector-java.version>
