--- a/leaf-core/src/main/resources/leaf.properties
+++ b/leaf-core/src/main/resources/leaf.properties
@@ -1,8 +1,8 @@
 leaf.name=com.sankuai.leaf.opensource.test
 leaf.segment.enable=false
-#leaf.jdbc.url=
-#leaf.jdbc.username=
-#leaf.jdbc.password=
+#leaf.segment.url=
+#leaf.segment.username=
+#leaf.segment.password=
 
 leaf.snowflake.enable=false
 #leaf.snowflake.address=
