--- a/leaf-plugin/leaf-boot-starter/pom.xml
+++ b/leaf-plugin/leaf-boot-starter/pom.xml
@@ -4,17 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>leaf-plugin</artifactId>
-        <groupId>com.sankuai.inf.leaf</groupId>
-        <version>1.0.1-RELEASE</version>
+        <groupId>com.tencent.devops.leaf</groupId>
+        <version>1.0.0-RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>leaf-boot-starter</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.sankuai.inf.leaf</groupId>
+            <groupId>com.tencent.devops.leaf</groupId>
             <artifactId>leaf-core</artifactId>
-            <version>1.0.1-RELEASE</version>
+            <version>1.0.0-RELEASE</version>
         </dependency>
     </dependencies>
 </project>
